[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/bg/Bg.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/FlatUI/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/FlatUI/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/SettingsMenu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_top = 100
custom_constants/margin_left = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1230.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Game Title"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 1230.0
margin_bottom = 154.0
custom_constants/margin_top = 70

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 186.324
margin_bottom = 227.251
size_flags_horizontal = 2
text = "Start"

[node name="OptionsBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 232.324
margin_bottom = 300.251
size_flags_horizontal = 2
text = "Options"

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 133.324
margin_bottom = 373.251
size_flags_horizontal = 2
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
